fix: overlap scroll issue with reveal sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -610,17 +610,26 @@ h1 {
 .bottom-text {
 
   filter: drop-shadow(3px 2px 0px #D30131);}
+.who-ist-2{
+  font-family: 'Balvine Demo';
+  line-height: 5.5rem !important;
+ width: 100%;
+ display: flex;
+ justify-content: center;
+  text-align:left;
+  
 
+}
 
 .who-ist{
   font-family: 'Balvine Demo';
   line-height: 5.5rem !important;
-  margin-top: 10rem;
-  margin-left: 15rem;
+ width: 100%;
+ display: flex;
+ justify-content: center;
   text-align:left;
-
-
-
+  top:70%;
+  z-index: 1000;
   /* background: url('../../public/imgs/paper-3.png');
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -706,11 +715,11 @@ padding:50px;
 
 
 .wrapper {
-
+  z-index: 100;
   top: 0;
   width: 100%;
   height: 100vh; /* Ensure full viewport height */
-  overflow: hidden;
+
 }
 
 .scrollable-div {
@@ -725,7 +734,7 @@ padding:50px;
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+
   transition: clip-path 0.5s ease, opacity 0.5s ease;
 }
 
@@ -761,7 +770,7 @@ padding:50px;
 body {
   scroll-behavior: smooth;
 }
-
+/* 
 
 .fixed {
   position: fixed;
@@ -769,7 +778,7 @@ body {
 
 .relative {
   position: relative;
-}
+} */
 
 .image-grid{
   display: grid;
